[project]
name = "disk-mem-off"
version = "0.1.0"
description = "Memory offloading runtime for large model inference with limited VRAM"
readme = "README.md"
requires-python = ">=3.14"
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=8.0"]
cuda = ["cuda-python"]
rocm = ["hip-python"]
mps = ["pyobjc-framework-Metal"]

[tool.pytest.ini_options]
testpaths = ["tests"]
