[project]
name = "disk-mem-off"
version = "0.1.0"
description = "Memory offloading runtime for large model inference with limited VRAM"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "huggingface-hub>=1.4.1",
    "numpy>=2.4.2",
    "safetensors>=0.7.0",
    "tokenizers>=0.22.2",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]
cuda = ["cuda-python"]
rocm = ["hip-python"]
mps = ["pyobjc-framework-Metal"]
inference = ["safetensors", "huggingface-hub", "numpy", "tokenizers"]

[tool.pytest.ini_options]
testpaths = ["tests"]
